Fixed error with popup height and whitespace on right side in mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,19 @@
 }
 
 html {
-    overflow-x: hidden;
     font-size: 62.5%; /*10px*/
 }
 
 body {
     font-family: 'Kumbh Sans', sans-serif;
     background-color: var(--color-white);
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; 
 }
 
 .cont {
@@ -45,8 +51,8 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     z-index: 99;
-    height: 100%;
-    width:  100%;   
+    height: 100vh;
+    width:  100vw;   
 }
 
 .logo-img {
